@@ -1,5 +1,5 @@
-# stdbool.m4 serial 2 (gettext-0.11.3)
-dnl Copyright (C) 2001-2002 Free Software Foundation, Inc.
+# stdbool.m4 serial 3 (gettext-0.12)
+dnl Copyright (C) 2001-2003 Free Software Foundation, Inc.
 dnl This file is free software, distributed under the terms of the GNU
 dnl General Public License.  As a special exception to the GNU General
 dnl Public License, this file may be distributed as part of a program
@@ -12,6 +12,8 @@ dnl Test whether <stdbool.h> is supported or must be substituted.
 AC_DEFUN([gt_STDBOOL_H],
 [dnl gcc 2.95.2 has an <stdbool.h> for which both 'true' and 'false' evaluate
 dnl to 0 in preprocessor expressions.
+dnl HP-UX 11 cc has an <stdbool.h> but the compiler doesn't understand the
+dnl type '_Bool' (to which 'bool' expands).
 AC_MSG_CHECKING([for stdbool.h])
 AC_CACHE_VAL(gt_cv_header_stdbool_h, [
   AC_TRY_COMPILE([#include <stdbool.h>
@@ -24,6 +26,7 @@ int A[-1];
 #define b 1
 #endif
 int B[b];
+bool c;
 ], [], gt_cv_header_stdbool_h=yes, gt_cv_header_stdbool_h=no)])
 AC_MSG_RESULT([$gt_cv_header_stdbool_h])
 if test $gt_cv_header_stdbool_h = yes; then
